src/tests/errors/functions/007.ura
// errors/functions/007 — duplicate parameter name
use "@/header"

fn add(a int, a int) int:
    return a

main():
    output(add(1, 2), "\n")
